# HookMotorController

./: .gitignore  CMakeLists.txt  STM32F031C6TX_FLASH.ld
Inc/: aspep.h  hardware_conf.h  main.h  mc_config.h  mc_configuration_registers.h  mc_hook_remote_config.h  mc_interface.h  mc_stm_types.h  mc_tasks.h  mcp_config.h  motor_conf.h  motorcontrol.h  parameters_conversion.h  parameters_conversion_f0xx.h  pmsm_motor_parameters.h  register_interface.h  stlink_mcptl.h  stm32f0xx_it.h
Src/: aspep.c  main.c  mc_config.c  mc_configuration_registers.c  mc_hook_remote_config.c  mc_interface.c  mc_tasks.c  mcp_config.c  motorcontrol.c  register_interface.c  stlink_mcptl.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_mc_it.c
inc/: aspep.h  encoding_checksum.h  hardware_conf.h  main.h  mc_config.h  mc_configuration_registers.h  mc_hook_remote_config.h  mc_interface.h  mc_math.h  mc_stm_types.h  mc_tasks.h  mcp_config.h  motor_conf.h  motorcontrol.h  parameters_conversion.h  parameters_conversion_f0xx.h  pmsm_motor_parameters.h  register_interface.h  stlink_mcptl.h  stm32f0xx_it.h
src/: aspep.c  encoding_checksum.cpp  main.c  mc_config.c  mc_configuration_registers.c  mc_hook_remote_config.c  mc_interface.c  mc_tasks.c  mcp_config.c  motorcontrol.c  register_interface.c  stlink_mcptl.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32f0xx_mc_it.c
